objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Contacted2__c</fullName>
        <label>Contacted2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the campaign member been contacted by sales</description>
        <label>Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext_Id_Value_Case_Insensitive__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Ext Id Value (Case-Insensitive)</label>
        <type>Text</type>
    </fields>
</CustomObject>